--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+libfsoframework (0+git20090623-1) pkg-fso; urgency=low
+
+  * new upstream snapshot
+  * upload to pkg-fso
+
+ -- Heiko Stuebner <heiko@sntech.de>  Tue, 23 Jun 2009 21:55:12 +0200
+
 libfsoframework (0+git20090616-1) UNRELEASED; urgency=low
 
   * new upstream snapshot
