--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+libfsoframework (0+git20090820-1) pkg-fso; urgency=low
+
+  * new upstream-snapshot
+  * bump standards to 3.8.3
+  * build-depend on libfsobasics
+
+ -- Heiko Stuebner <heiko@sntech.de>  Thu, 20 Aug 2009 20:38:12 +0200
+
 libfsoframework (0+git20090716-1) pkg-fso; urgency=low
 
   * new upstream-snapshot
