--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-libfsoframework (0+git20090823-1) pkg-fso; urgency=low
+libfsoframework (0+git20090823-1) unstable; urgency=low
 
   * new upstream-snapshot
-  * fixes a bug in handling of plugins in fsousaged
+  * fixes a bug in handling of plugins
 
  -- Heiko Stuebner <heiko@sntech.de>  Sun, 23 Aug 2009 14:38:12 +0200
 
