--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libfsoframework (0+git20090823-2) unstable; urgency=low
+
+  * fixed dependencies of libfsoframework-dev to include libfsobasics-dev
+
+ -- Heiko Stuebner <heiko@sntech.de>  Fri, 04 Sep 2009 09:00:23 +0200
+
 libfsoframework (0+git20090823-1) unstable; urgency=low
 
   * new upstream-snapshot
