--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libfsoframework (0.2.3.1-1) unstable; urgency=low
+
+  * new upstream release
+
+ -- Heiko Stuebner <heiko@sntech.de>  Wed, 11 Nov 2009 22:30:53 +0100
+
 libfsoframework (0.2.3-1) unstable; urgency=low
 
   * new upstream release
