--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libfsoframework (0.2.4+git20091229-1) unstable; urgency=low
+
+  * new upstream snapshot
+
+ -- Heiko Stuebner <heiko@sntech.de>  Tue, 05 Jan 2010 22:23:53 +0100
+
 libfsoframework (0.2.3.1-1) unstable; urgency=low
 
   * new upstream release
