--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+libfsoframework (0.8.2+git20110805-1) unstable; urgency=low
+
+  * new upstrea snapshot
+  * fixed lintian warnings
+  * bump standards to 3.9.2
+  * fixed cleanfiles
+  * remove .la from libfsoframework-dev
+  * add Rico Rommel <rico@bierrommel.de> to uploaders
+
+ -- Rico Rommel <rico@bierrommel.de>  Fri, 05 Aug 2011 19:50:13 +0200
+
 libfsoframework (0.2.4+git20100501-1) unstable; urgency=low
 
   * new upstream snapshot
