--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ libfsoframework (0.8.2+git20110805-1) unstable; urgency=low
 
   [ Sebastian Reichel ]
   * add me to uploaders
+  * add debian/watch
 
  -- Sebastian Reichel <sre@debian.org>  Sat, 20 Aug 2011 09:31:02 +0200
 
