--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ libfsoframework (0.8.2+git20110805-1) unstable; urgency=low
   [ Sebastian Reichel ]
   * add me to uploaders
   * add debian/watch
+  * add multi-arch support
 
  -- Sebastian Reichel <sre@debian.org>  Sat, 20 Aug 2011 09:31:02 +0200
 
