--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ libfsoframework (0.8.2+git20110805-1) unstable; urgency=low
   * add me to uploaders
   * add debian/watch
   * add multi-arch support
+  * switch from cdbs to debhelper
 
  -- Sebastian Reichel <sre@debian.org>  Sat, 20 Aug 2011 09:31:02 +0200
 
