--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+libfsoframework (0.12.0~rc2-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Lukas Märdian <luk@slyon.de>  Mon, 17 Sep 2012 14:32:11 +0200
+
 libfsoframework (0.11.0-1) unstable; urgency=low
 
   [ Simon Busch ]
